--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='UTF-8'/>
     <title>Un po' troppo</title>
+    <link href="style.css" rel="stylesheet" media="screen"/>
   </head>
   <body>
       <img style='width:100%;display:block;height:auto;' src='troppo.gif' />
