--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link href="style.css" rel="stylesheet" media="screen"/>
   </head>
   <body>
-      <img style='width:100%;display:block;height:auto;' src='troppo.gif' />
+      <div class="img"></div>
   </body>
 </html>
