--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link href="style.css" rel="stylesheet" media="screen"/>
   </head>
   <body>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81898-14"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        
+        gtag('config', 'UA-81898-14');
+      </script>
       <div class="img"></div>
   </body>
 </html>
