--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ _  / / /_  __ \    ___  __ \  __ \     _|/    _  __/_  ___/  __ \__  __ \__  __ 
     <meta charset='UTF-8'/>
     <title>Un po' troppo</title>
     <link href="style.css" rel="stylesheet" media="screen"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   </head>
   <body>
       <!-- Global site tag (gtag.js) - Google Analytics -->
